crates/apollo-compiler/test_data/diagnostics/0109_null_in_list_issue_738.txt
Error: expected value of type CustomScalar!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:14:16]
    │
  8 │   foo(arg: [CustomScalar!]!): String!
    │            ────────┬───────  
    │                    ╰───────── field declared here as CustomScalar! type
    │ 
 14 │   a: foo(arg: [null, 1])
    │                ──┬─  
    │                  ╰─── argument declared here is of Null type
────╯
Error: expected value of type CustomScalar!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:15:16]
    │
  8 │   foo(arg: [CustomScalar!]!): String!
    │            ────────┬───────  
    │                    ╰───────── field declared here as CustomScalar! type
    │ 
 15 │   b: foo(arg: [null, null, "hello"])
    │                ──┬─  
    │                  ╰─── argument declared here is of Null type
────╯
Error: expected value of type CustomScalar!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:15:22]
    │
  8 │   foo(arg: [CustomScalar!]!): String!
    │            ────────┬───────  
    │                    ╰───────── field declared here as CustomScalar! type
    │ 
 15 │   b: foo(arg: [null, null, "hello"])
    │                      ──┬─  
    │                        ╰─── argument declared here is of Null type
────╯
Error: expected value of type String!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:16:13]
    │
  9 │   bar(arg: [String!]): String!
    │            ────┬────  
    │                ╰────── field declared here as String! type
    │ 
 16 │   bar(arg: [null])
    │             ──┬─  
    │               ╰─── argument declared here is of Null type
────╯
Error: expected value of type String!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:17:27]
    │
  4 │   list: [String!]
    │         ────┬────  
    │             ╰────── field declared here as String! type
    │ 
 17 │   list(arg: {list: ["ok", null]})
    │                           ──┬─  
    │                             ╰─── argument declared here is of Null type
────╯

